modules/wetkit_emberx/css/ember-media.css
/**
 * Media browser styles.
 */

.ui-dialog.media-wrapper {
  padding: 0.6em;
  left: 0px !important;
}
.ui-dialog.media-wrapper .ui-dialog-titlebar {
  background: none;
  border: none;
  padding: 0;
  margin-top: 0.3em;
}
.ui-dialog.media-wrapper #ui-dialog-title-mediaBrowser {
  display: none;
}
.ui-dialog.media-wrapper iframe {
  margin-top: 1em;
  margin-bottom: 0;
}

